# experiment_control

./: .gitignore  IPG_2um_SFTL.py  LICENSE  PlotBristol.py  README.md  anaconda3-py36.bat  bristol621_server.py  bristol_lv_server.py  bristol_server.py  chi2_wg_tools.py  environment.yml  experiment_utilities.py  ipg_sftl_lib.py  keithley2400_client.py  keithley2400_plot.py  keithley2400_server.py  keithley_2400_sourcemeter.py  lakeshore_client.py  live_ocean_optics_HR2000_spectrometer_gui.py  live_ocean_optics_HR2000_spectrometer_gui_qtpygraph.py  live_ocean_optics_HR4000_spectrometer_gui.py  mlxps.py  oceanoptics_hr4000_plot.py  setup.cfg  xps_example.py
422hub/: LI-curve.py  anaconda3-py36.bat  lockin-detection.ipynb
428hub/: GPIBManager.py  LI-curve.py  LIV test.ipynb  anaconda3-py36.bat  collect_FreqCounter.py  dark_counts_vs_voltage.py  events_time.py  interarrival_histogram.py  meas_inter_times.py  meas_inter_times_new.py  measure_frequency.py  nd_cal.pickle  nd_cal_830.pickle  photonmover_frontend.py  pqc_collect.py  scs-filter-control.py  time_vs_count.py  v-vs-counts.py  v-vs-interarrival.py
448hub/: anaconda3-py36.bat
at-home-setup/: interarrival_histogram.py  lockin-detection.ipynb  nd_cal.pickle  smu-pm-control.py  time_vs_count.py  tot_meas.py  tot_meas_2.py  v-vs-counts.py
cryohub/: cryohub.py  cryohub_main.ui
examples/: IPG_SFTL_calibration_2017_9_21.npy  autocorrelator.py  cavity_traces.py  general_imports.py  keithley2400_plot.py  keithley2400_server.py  kjl_server.py  lakeshore_plot.py  live_ocean_optics_HR2000_spectrometer_gui.py  xantrex.py  (+4 more)
(+937 files in other folders)
