[metadata]
name = experiment_control
version = 0.0.1
author = Dodd Gray, Jaehwan Kim, Nate Bogdanowicz
author_email = djgrayjr@gmail.com
description = A collection of control code for various laser experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/doddgray/experiment_control
project_urls =
    Bug Tracker = https://github.com/doddgray/experiment_control/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = experiment_control
packages = find:
python_requires = >=3.4

[options.packages.find]
where = experiment_control
